# allinone

./: .gitignore  AGENTS.md  README.md  pyproject.toml
configs/data_recipes/: m400_phase1.yaml
configs/model_recipes/: qwen35_9b.yaml  qwen_gateway.yaml
configs/runtime_policies/: m400_default.json
docs/architecture/: README.md  autoresearch-mapping.md  migration-map.md  perception-adapters.md  source-assets.md
docs/plans/: 2026-03-23-allinone-ddd-design.md  2026-03-23-allinone-implementation.md  2026-03-23-candidate-judge-design.md  2026-03-23-candidate-judge.md  2026-03-23-experiment-batch-replay-design.md  2026-03-23-experiment-batch-replay.md  2026-03-23-qwen-language-gateway-design.md  2026-03-23-qwen-language-gateway.md  2026-03-23-runtime-policy-loop-design.md  2026-03-23-runtime-policy-loop.md  2026-03-23-sensitive-policy-replay-design.md  2026-03-23-sensitive-policy-replay-hardening-design.md  2026-03-23-sensitive-policy-replay-hardening.md  2026-03-23-sensitive-policy-replay.md  2026-03-23-vjepa-analyze-clip-design.md  2026-03-23-vjepa-analyze-clip.md  2026-03-23-yolo-image-detect-design.md  2026-03-23-yolo-image-detect.md  README.md
experiments/: README.md
experiments/manifests/: m400_phase1_demo.jsonl
experiments/samples/: meter_shift_right.json  raw_meter_shift_right.json
ops/remote/: bootstrap_server.sh  check_qwen_service.sh  install_qwen_runtime.sh  run_runtime_loop.sh  start_qwen_service.sh  sync_to_server.sh
src/allinone/: __init__.py
tests/: __init__.py  _repo.py  conftest.py  test_package_imports.py  test_repo_layout.py
(+122 files in other folders)
